--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "0.0.1",
 	"main": "index.js",
 	"license": "MIT",
+	"scripts": {
+		"install": "node index.js"
+	},
 	"dependencies": {
 		"chalk": "^2.4.2"
 	}
