--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
 	"scripts": {
 		"install": "node index.js"
 	},
+	"bin": {
+		"monochild": "cli.js"
+	},
 	"dependencies": {
 		"chalk": "^2.4.2"
 	}
